--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@babel/runtime": "^7.4.4",
     "lodash": "^4.17.15",
-    "lodash.template": "^4.5.0"
+    "lodash.template": "^4.5.0",
+    "tunnel-agent": "^0.6.0"
   }
 }
